编译原理/LAB1/lab1_example_solution1/Code/syntax.output
State 110 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error SEMI
    8       | error SEMI
    9       | Specifier error

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList
   12           | VarDec error
   13           | VarDec error COMMA ExtDecList

   14 Specifier: TYPE
   15          | StructSpecifier

   16 StructSpecifier: STRUCT OptTag LC DefList RC
   17                | STRUCT Tag
   18                | STRUCT error LC DefList RC
   19                | STRUCT OptTag LC error RC
   20                | STRUCT OptTag LC error
   21                | STRUCT error

   22 OptTag: ID
   23       | ε

   24 Tag: ID

   25 VarDec: ID
   26       | VarDec LB INT RB
   27       | VarDec LB error RB
   28       | VarDec LB error

   29 FunDec: ID LP VarList RP
   30       | ID LP RP
   31       | ID LP error RP
   32       | ID LP error

   33 VarList: ParamDec COMMA VarList
   34        | ParamDec

   35 ParamDec: Specifier VarDec

   36 CompSt: LC DefList StmtList RC

   37 StmtList: Stmt StmtList
   38         | ε

   39 Stmt: Exp SEMI
   40     | CompSt
   41     | RETURN Exp SEMI
   42     | IF LP Exp RP Stmt
   43     | IF LP Exp RP Stmt ELSE Stmt
   44     | WHILE LP Exp RP Stmt
   45     | error SEMI
   46     | IF LP error RP Stmt
   47     | IF LP Exp RP error ELSE Stmt
   48     | IF LP error RP ELSE Stmt
   49     | error LP Exp RP Stmt

   50 DefList: Def DefList
   51        | ε

   52 Def: Specifier DecList SEMI

   53 DecList: Dec
   54        | Dec COMMA DecList
   55        | Dec error DecList

   56 Dec: VarDec
   57    | VarDec ASSIGNOP Exp
   58    | error ASSIGNOP Exp

   59 Exp: Exp ASSIGNOP Exp
   60    | Exp AND Exp
   61    | Exp OR Exp
   62    | Exp RELOP Exp
   63    | Exp PLUS Exp
   64    | Exp MINUS Exp
   65    | Exp STAR Exp
   66    | Exp DIV Exp
   67    | LP Exp RP
   68    | MINUS Exp
   69    | NOT Exp
   70    | ID LP Args RP
   71    | ID LP RP
   72    | ID LP error RP
   73    | ID LP error
   74    | Exp LB Exp RB
   75    | Exp DOT ID
   76    | ID
   77    | INT
   78    | FLOAT
   79    | Exp ASSIGNOP error
   80    | Exp AND error
   81    | Exp OR error
   82    | Exp RELOP error
   83    | Exp PLUS error
   84    | Exp MINUS error
   85    | Exp STAR error
   86    | Exp DIV error
   87    | Exp LB error RB

   88 Args: Exp COMMA Args
   89     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 9 12 13 18 19 20 21 27 28 31 32 45 46 47 48 49 55 58 72 73 79 80 81 82 83 84 85 86 87
    INT (258) 26 77
    FLOAT (259) 78
    ID (260) 22 24 25 29 30 31 32 70 71 72 73 75 76
    SEMI (261) 4 5 7 8 39 41 45 52
    COMMA (262) 11 13 33 54 88
    ASSIGNOP (263) 57 58 59 79
    RELOP (264) 62 82
    PLUS (265) 63 83
    MINUS (266) 64 68 84
    STAR (267) 65 85
    DIV (268) 66 86
    AND (269) 60 80
    OR (270) 61 81
    DOT (271) 75
    NOT (272) 69
    TYPE (273) 14
    LP (274) 29 30 31 32 42 43 44 46 47 48 49 67 70 71 72 73
    RP (275) 29 30 31 42 43 44 46 47 48 49 67 70 71 72
    LB (276) 26 27 28 74 87
    RB (277) 26 27 74 87
    LC (278) 16 18 19 20 36
    RC (279) 16 18 19 36
    STRUCT (280) 16 17 18 19 20 21
    RETURN (281) 41
    IF (282) 42 43 46 47 48
    ELSE (283) 43 47 48
    WHILE (284) 44
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program (32)
        on left: 1
        on right: 0
    ExtDefList (33)
        on left: 2 3
        on right: 1 2
    ExtDef (34)
        on left: 4 5 6 7 8 9
        on right: 2
    ExtDecList (35)
        on left: 10 11 12 13
        on right: 4 11 13
    Specifier (36)
        on left: 14 15
        on right: 4 5 6 7 9 35 52
    StructSpecifier (37)
        on left: 16 17 18 19 20 21
        on right: 15
    OptTag (38)
        on left: 22 23
        on right: 16 19 20
    Tag (39)
        on left: 24
        on right: 17
    VarDec (40)
        on left: 25 26 27 28
        on right: 10 11 12 13 26 27 28 35 56 57
    FunDec (41)
        on left: 29 30 31 32
        on right: 6
    VarList (42)
        on left: 33 34
        on right: 29 33
    ParamDec (43)
        on left: 35
        on right: 33 34
    CompSt (44)
        on left: 36
        on right: 6 40
    StmtList (45)
        on left: 37 38
        on right: 36 37
    Stmt (46)
        on left: 39 40 41 42 43 44 45 46 47 48 49
        on right: 37 42 43 44 46 47 48 49
    DefList (47)
        on left: 50 51
        on right: 16 18 36 50
    Def (48)
        on left: 52
        on right: 50
    DecList (49)
        on left: 53 54 55
        on right: 52 54 55
    Dec (50)
        on left: 56 57 58
        on right: 53 54 55
    Exp (51)
        on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
        on right: 39 41 42 43 44 47 49 57 58 59 60 61 62 63 64 65 66 67 68 69 74 75 79 80 81 82 83 84 85 86 87 88 89
    Args (52)
        on left: 88 89
        on right: 70 88


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error • SEMI

    SEMI  shift, and go to state 9


State 2

   14 Specifier: TYPE •

    $default  reduce using rule 14 (Specifier)


State 3

   16 StructSpecifier: STRUCT • OptTag LC DefList RC
   17                | STRUCT • Tag
   18                | STRUCT • error LC DefList RC
   19                | STRUCT • OptTag LC error RC
   20                | STRUCT • OptTag LC error
   21                | STRUCT • error

    error  shift, and go to state 10
    ID     shift, and go to state 11

    LC  reduce using rule 23 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • error SEMI
    9       | Specifier • error

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   15 Specifier: StructSpecifier •

    $default  reduce using rule 15 (Specifier)


State 9

    8 ExtDef: error SEMI •

    $default  reduce using rule 8 (ExtDef)


State 10

   18 StructSpecifier: STRUCT error • LC DefList RC
   21                | STRUCT error •

    LC  shift, and go to state 22

    $default  reduce using rule 21 (StructSpecifier)


State 11

   22 OptTag: ID •
   24 Tag: ID •

    LC        reduce using rule 22 (OptTag)
    $default  reduce using rule 24 (Tag)


State 12

   16 StructSpecifier: STRUCT OptTag • LC DefList RC
   19                | STRUCT OptTag • LC error RC
   20                | STRUCT OptTag • LC error

    LC  shift, and go to state 23


State 13

   17 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 17 (StructSpecifier)


State 14

    0 $accept: Program $end •

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 16

    7 ExtDef: Specifier error • SEMI
    9       | Specifier error •

    SEMI  shift, and go to state 24

    $default  reduce using rule 9 (ExtDef)


State 17

   25 VarDec: ID •
   29 FunDec: ID • LP VarList RP
   30       | ID • LP RP
   31       | ID • LP error RP
   32       | ID • LP error

    LP  shift, and go to state 25

    $default  reduce using rule 25 (VarDec)


State 18

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 26


State 20

   10 ExtDecList: VarDec •
   11           | VarDec • COMMA ExtDecList
   12           | VarDec • error
   13           | VarDec • error COMMA ExtDecList
   26 VarDec: VarDec • LB INT RB
   27       | VarDec • LB error RB
   28       | VarDec • LB error

    error  shift, and go to state 27
    COMMA  shift, and go to state 28
    LB     shift, and go to state 29

    SEMI  reduce using rule 10 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec • CompSt

    LC  shift, and go to state 30

    CompSt  go to state 31


State 22

   18 StructSpecifier: STRUCT error LC • DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 51 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 33
    Def              go to state 34


State 23

   16 StructSpecifier: STRUCT OptTag LC • DefList RC
   19                | STRUCT OptTag LC • error RC
   20                | STRUCT OptTag LC • error

    error   shift, and go to state 35
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 51 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 36
    Def              go to state 34


State 24

    7 ExtDef: Specifier error SEMI •

    $default  reduce using rule 7 (ExtDef)


State 25

   29 FunDec: ID LP • VarList RP
   30       | ID LP • RP
   31       | ID LP • error RP
   32       | ID LP • error

    error   shift, and go to state 37
    TYPE    shift, and go to state 2
    RP      shift, and go to state 38
    STRUCT  shift, and go to state 3

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 40
    ParamDec         go to state 41


State 26

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 27

   12 ExtDecList: VarDec error •
   13           | VarDec error • COMMA ExtDecList

    COMMA  shift, and go to state 42

    $default  reduce using rule 12 (ExtDecList)


State 28

   11 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 43

    ExtDecList  go to state 44
    VarDec      go to state 20


State 29

   26 VarDec: VarDec LB • INT RB
   27       | VarDec LB • error RB
   28       | VarDec LB • error

    error  shift, and go to state 45
    INT    shift, and go to state 46


State 30

   36 CompSt: LC • DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 51 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 34


State 31

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 32

   52 Def: Specifier • DecList SEMI

    error  shift, and go to state 48
    ID     shift, and go to state 43

    VarDec   go to state 49
    DecList  go to state 50
    Dec      go to state 51


State 33

   18 StructSpecifier: STRUCT error LC DefList • RC

    RC  shift, and go to state 52


State 34

   50 DefList: Def • DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 51 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 53
    Def              go to state 34


State 35

   19 StructSpecifier: STRUCT OptTag LC error • RC
   20                | STRUCT OptTag LC error •

    RC  shift, and go to state 54

    $default  reduce using rule 20 (StructSpecifier)


State 36

   16 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 55


State 37

   31 FunDec: ID LP error • RP
   32       | ID LP error •

    RP  shift, and go to state 56

    $default  reduce using rule 32 (FunDec)


State 38

   30 FunDec: ID LP RP •

    $default  reduce using rule 30 (FunDec)


State 39

   35 ParamDec: Specifier • VarDec

    ID  shift, and go to state 43

    VarDec  go to state 57


State 40

   29 FunDec: ID LP VarList • RP

    RP  shift, and go to state 58


State 41

   33 VarList: ParamDec • COMMA VarList
   34        | ParamDec •

    COMMA  shift, and go to state 59

    $default  reduce using rule 34 (VarList)


State 42

   13 ExtDecList: VarDec error COMMA • ExtDecList

    ID  shift, and go to state 43

    ExtDecList  go to state 60
    VarDec      go to state 20


State 43

   25 VarDec: ID •

    $default  reduce using rule 25 (VarDec)


State 44

   11 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 11 (ExtDecList)


State 45

   27 VarDec: VarDec LB error • RB
   28       | VarDec LB error •

    RB  shift, and go to state 61

    $default  reduce using rule 28 (VarDec)


State 46

   26 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 62


State 47

   36 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 63
    INT     shift, and go to state 64
    FLOAT   shift, and go to state 65
    ID      shift, and go to state 66
    MINUS   shift, and go to state 67
    NOT     shift, and go to state 68
    LP      shift, and go to state 69
    LC      shift, and go to state 30
    RETURN  shift, and go to state 70
    IF      shift, and go to state 71
    WHILE   shift, and go to state 72

    RC  reduce using rule 38 (StmtList)

    CompSt    go to state 73
    StmtList  go to state 74
    Stmt      go to state 75
    Exp       go to state 76


State 48

   58 Dec: error • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 77


State 49

   26 VarDec: VarDec • LB INT RB
   27       | VarDec • LB error RB
   28       | VarDec • LB error
   56 Dec: VarDec •
   57    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 78
    LB        shift, and go to state 29

    $default  reduce using rule 56 (Dec)


State 50

   52 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 79


State 51

   53 DecList: Dec •
   54        | Dec • COMMA DecList
   55        | Dec • error DecList

    error  shift, and go to state 80
    COMMA  shift, and go to state 81

    SEMI  reduce using rule 53 (DecList)


State 52

   18 StructSpecifier: STRUCT error LC DefList RC •

    $default  reduce using rule 18 (StructSpecifier)


State 53

   50 DefList: Def DefList •

    $default  reduce using rule 50 (DefList)


State 54

   19 StructSpecifier: STRUCT OptTag LC error RC •

    $default  reduce using rule 19 (StructSpecifier)


State 55

   16 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 16 (StructSpecifier)


State 56

   31 FunDec: ID LP error RP •

    $default  reduce using rule 31 (FunDec)


State 57

   26 VarDec: VarDec • LB INT RB
   27       | VarDec • LB error RB
   28       | VarDec • LB error
   35 ParamDec: Specifier VarDec •

    LB  shift, and go to state 29

    $default  reduce using rule 35 (ParamDec)


State 58

   29 FunDec: ID LP VarList RP •

    $default  reduce using rule 29 (FunDec)


State 59

   33 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 82
    ParamDec         go to state 41


State 60

   13 ExtDecList: VarDec error COMMA ExtDecList •

    $default  reduce using rule 13 (ExtDecList)


State 61

   27 VarDec: VarDec LB error RB •

    $default  reduce using rule 27 (VarDec)


State 62

   26 VarDec: VarDec LB INT RB •

    $default  reduce using rule 26 (VarDec)


State 63

   45 Stmt: error • SEMI
   49     | error • LP Exp RP Stmt

    SEMI  shift, and go to state 83
    LP    shift, and go to state 84


State 64

   77 Exp: INT •

    $default  reduce using rule 77 (Exp)


State 65

   78 Exp: FLOAT •

    $default  reduce using rule 78 (Exp)


State 66

   70 Exp: ID • LP Args RP
   71    | ID • LP RP
   72    | ID • LP error RP
   73    | ID • LP error
   76    | ID •

    LP  shift, and go to state 85

    $default  reduce using rule 76 (Exp)


State 67

   68 Exp: MINUS • Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 86


State 68

   69 Exp: NOT • Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 87


State 69

   67 Exp: LP • Exp RP

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 88


State 70

   41 Stmt: RETURN • Exp SEMI

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 89


State 71

   42 Stmt: IF • LP Exp RP Stmt
   43     | IF • LP Exp RP Stmt ELSE Stmt
   46     | IF • LP error RP Stmt
   47     | IF • LP Exp RP error ELSE Stmt
   48     | IF • LP error RP ELSE Stmt

    LP  shift, and go to state 90


State 72

   44 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 91


State 73

   40 Stmt: CompSt •

    $default  reduce using rule 40 (Stmt)


State 74

   36 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 92


State 75

   37 StmtList: Stmt • StmtList

    error   shift, and go to state 63
    INT     shift, and go to state 64
    FLOAT   shift, and go to state 65
    ID      shift, and go to state 66
    MINUS   shift, and go to state 67
    NOT     shift, and go to state 68
    LP      shift, and go to state 69
    LC      shift, and go to state 30
    RETURN  shift, and go to state 70
    IF      shift, and go to state 71
    WHILE   shift, and go to state 72

    RC  reduce using rule 38 (StmtList)

    CompSt    go to state 73
    StmtList  go to state 93
    Stmt      go to state 75
    Exp       go to state 76


State 76

   39 Stmt: Exp • SEMI
   59 Exp: Exp • ASSIGNOP Exp
   60    | Exp • AND Exp
   61    | Exp • OR Exp
   62    | Exp • RELOP Exp
   63    | Exp • PLUS Exp
   64    | Exp • MINUS Exp
   65    | Exp • STAR Exp
   66    | Exp • DIV Exp
   74    | Exp • LB Exp RB
   75    | Exp • DOT ID
   79    | Exp • ASSIGNOP error
   80    | Exp • AND error
   81    | Exp • OR error
   82    | Exp • RELOP error
   83    | Exp • PLUS error
   84    | Exp • MINUS error
   85    | Exp • STAR error
   86    | Exp • DIV error
   87    | Exp • LB error RB

    SEMI      shift, and go to state 94
    ASSIGNOP  shift, and go to state 95
    RELOP     shift, and go to state 96
    PLUS      shift, and go to state 97
    MINUS     shift, and go to state 98
    STAR      shift, and go to state 99
    DIV       shift, and go to state 100
    AND       shift, and go to state 101
    OR        shift, and go to state 102
    DOT       shift, and go to state 103
    LB        shift, and go to state 104


State 77

   58 Dec: error ASSIGNOP • Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 105


State 78

   57 Dec: VarDec ASSIGNOP • Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 106


State 79

   52 Def: Specifier DecList SEMI •

    $default  reduce using rule 52 (Def)


State 80

   55 DecList: Dec error • DecList

    error  shift, and go to state 48
    ID     shift, and go to state 43

    VarDec   go to state 49
    DecList  go to state 107
    Dec      go to state 51


State 81

   54 DecList: Dec COMMA • DecList

    error  shift, and go to state 48
    ID     shift, and go to state 43

    VarDec   go to state 49
    DecList  go to state 108
    Dec      go to state 51


State 82

   33 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 33 (VarList)


State 83

   45 Stmt: error SEMI •

    $default  reduce using rule 45 (Stmt)


State 84

   49 Stmt: error LP • Exp RP Stmt

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 109


State 85

   70 Exp: ID LP • Args RP
   71    | ID LP • RP
   72    | ID LP • error RP
   73    | ID LP • error

    error  shift, and go to state 110
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    RP     shift, and go to state 111

    Exp   go to state 112
    Args  go to state 113


State 86

   59 Exp: Exp • ASSIGNOP Exp
   60    | Exp • AND Exp
   61    | Exp • OR Exp
   62    | Exp • RELOP Exp
   63    | Exp • PLUS Exp
   64    | Exp • MINUS Exp
   65    | Exp • STAR Exp
   66    | Exp • DIV Exp
   68    | MINUS Exp •
   74    | Exp • LB Exp RB
   75    | Exp • DOT ID
   79    | Exp • ASSIGNOP error
   80    | Exp • AND error
   81    | Exp • OR error
   82    | Exp • RELOP error
   83    | Exp • PLUS error
   84    | Exp • MINUS error
   85    | Exp • STAR error
   86    | Exp • DIV error
   87    | Exp • LB error RB

    STAR  shift, and go to state 99
    DIV   shift, and go to state 100
    DOT   shift, and go to state 103
    LB    shift, and go to state 104

    $default  reduce using rule 68 (Exp)


State 87

   59 Exp: Exp • ASSIGNOP Exp
   60    | Exp • AND Exp
   61    | Exp • OR Exp
   62    | Exp • RELOP Exp
   63    | Exp • PLUS Exp
   64    | Exp • MINUS Exp
   65    | Exp • STAR Exp
   66    | Exp • DIV Exp
   69    | NOT Exp •
   74    | Exp • LB Exp RB
   75    | Exp • DOT ID
   79    | Exp • ASSIGNOP error
   80    | Exp • AND error
   81    | Exp • OR error
   82    | Exp • RELOP error
   83    | Exp • PLUS error
   84    | Exp • MINUS error
   85    | Exp • STAR error
   86    | Exp • DIV error
   87    | Exp • LB error RB

    DOT  shift, and go to state 103
    LB   shift, and go to state 104

    $default  reduce using rule 69 (Exp)


State 88

   59 Exp: Exp • ASSIGNOP Exp
   60    | Exp • AND Exp
   61    | Exp • OR Exp
   62    | Exp • RELOP Exp
   63    | Exp • PLUS Exp
   64    | Exp • MINUS Exp
   65    | Exp • STAR Exp
   66    | Exp • DIV Exp
   67    | LP Exp • RP
   74    | Exp • LB Exp RB
   75    | Exp • DOT ID
   79    | Exp • ASSIGNOP error
   80    | Exp • AND error
   81    | Exp • OR error
   82    | Exp • RELOP error
   83    | Exp • PLUS error
   84    | Exp • MINUS error
   85    | Exp • STAR error
   86    | Exp • DIV error
   87    | Exp • LB error RB

    ASSIGNOP  shift, and go to state 95
    RELOP     shift, and go to state 96
    PLUS      shift, and go to state 97
    MINUS     shift, and go to state 98
    STAR      shift, and go to state 99
    DIV       shift, and go to state 100
    AND       shift, and go to state 101
    OR        shift, and go to state 102
    DOT       shift, and go to state 103
    RP        shift, and go to state 114
    LB        shift, and go to state 104


State 89

   41 Stmt: RETURN Exp • SEMI
   59 Exp: Exp • ASSIGNOP Exp
   60    | Exp • AND Exp
   61    | Exp • OR Exp
   62    | Exp • RELOP Exp
   63    | Exp • PLUS Exp
   64    | Exp • MINUS Exp
   65    | Exp • STAR Exp
   66    | Exp • DIV Exp
   74    | Exp • LB Exp RB
   75    | Exp • DOT ID
   79    | Exp • ASSIGNOP error
   80    | Exp • AND error
   81    | Exp • OR error
   82    | Exp • RELOP error
   83    | Exp • PLUS error
   84    | Exp • MINUS error
   85    | Exp • STAR error
   86    | Exp • DIV error
   87    | Exp • LB error RB

    SEMI      shift, and go to state 115
    ASSIGNOP  shift, and go to state 95
    RELOP     shift, and go to state 96
    PLUS      shift, and go to state 97
    MINUS     shift, and go to state 98
    STAR      shift, and go to state 99
    DIV       shift, and go to state 100
    AND       shift, and go to state 101
    OR        shift, and go to state 102
    DOT       shift, and go to state 103
    LB        shift, and go to state 104


State 90

   42 Stmt: IF LP • Exp RP Stmt
   43     | IF LP • Exp RP Stmt ELSE Stmt
   46     | IF LP • error RP Stmt
   47     | IF LP • Exp RP error ELSE Stmt
   48     | IF LP • error RP ELSE Stmt

    error  shift, and go to state 116
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 117


State 91

   44 Stmt: WHILE LP • Exp RP Stmt

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 118


State 92

   36 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 36 (CompSt)


State 93

   37 StmtList: Stmt StmtList •

    $default  reduce using rule 37 (StmtList)


State 94

   39 Stmt: Exp SEMI •

    $default  reduce using rule 39 (Stmt)


State 95

   59 Exp: Exp ASSIGNOP • Exp
   79    | Exp ASSIGNOP • error

    error  shift, and go to state 119
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 120


State 96

   62 Exp: Exp RELOP • Exp
   82    | Exp RELOP • error

    error  shift, and go to state 121
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 122


State 97

   63 Exp: Exp PLUS • Exp
   83    | Exp PLUS • error

    error  shift, and go to state 123
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 124


State 98

   64 Exp: Exp MINUS • Exp
   84    | Exp MINUS • error

    error  shift, and go to state 125
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 126


State 99

   65 Exp: Exp STAR • Exp
   85    | Exp STAR • error

    error  shift, and go to state 127
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 128


State 100

   66 Exp: Exp DIV • Exp
   86    | Exp DIV • error

    error  shift, and go to state 129
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 130


State 101

   60 Exp: Exp AND • Exp
   80    | Exp AND • error

    error  shift, and go to state 131
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 132


State 102

   61 Exp: Exp OR • Exp
   81    | Exp OR • error

    error  shift, and go to state 133
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 134


State 103

   75 Exp: Exp DOT • ID

    ID  shift, and go to state 135


State 104

   74 Exp: Exp LB • Exp RB
   87    | Exp LB • error RB

    error  shift, and go to state 136
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 137


State 105

   58 Dec: error ASSIGNOP Exp •
   59 Exp: Exp • ASSIGNOP Exp
   60    | Exp • AND Exp
   61    | Exp • OR Exp
   62    | Exp • RELOP Exp
   63    | Exp • PLUS Exp
   64    | Exp • MINUS Exp
   65    | Exp • STAR Exp
   66    | Exp • DIV Exp
   74    | Exp • LB Exp RB
   75    | Exp • DOT ID
   79    | Exp • ASSIGNOP error
   80    | Exp • AND error
   81    | Exp • OR error
   82    | Exp • RELOP error
   83    | Exp • PLUS error
   84    | Exp • MINUS error
   85    | Exp • STAR error
   86    | Exp • DIV error
   87    | Exp • LB error RB

    ASSIGNOP  shift, and go to state 95
    RELOP     shift, and go to state 96
    PLUS      shift, and go to state 97
    MINUS     shift, and go to state 98
    STAR      shift, and go to state 99
    DIV       shift, and go to state 100
    AND       shift, and go to state 101
    OR        shift, and go to state 102
    DOT       shift, and go to state 103
    LB        shift, and go to state 104

    $default  reduce using rule 58 (Dec)


State 106

   57 Dec: VarDec ASSIGNOP Exp •
   59 Exp: Exp • ASSIGNOP Exp
   60    | Exp • AND Exp
   61    | Exp • OR Exp
   62    | Exp • RELOP Exp
   63    | Exp • PLUS Exp
   64    | Exp • MINUS Exp
   65    | Exp • STAR Exp
   66    | Exp • DIV Exp
   74    | Exp • LB Exp RB
   75    | Exp • DOT ID
   79    | Exp • ASSIGNOP error
   80    | Exp • AND error
   81    | Exp • OR error
   82    | Exp • RELOP error
   83    | Exp • PLUS error
   84    | Exp • MINUS error
   85    | Exp • STAR error
   86    | Exp • DIV error
   87    | Exp • LB error RB
